# QuadratizePDE

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  examples_loader.py  main.py  schemas.py
backend/app/services/: examples_service.py  quadratize_service.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AdvancedOptions.tsx  CustomPDETab.tsx  ExampleTab.tsx  LatexRenderer.tsx  ResultsDisplay.tsx
frontend/src/services/: api.ts
