[project]
name = "quadratizepde-backend"
version = "0.1.0"
description = "Backend API for QuadratizePDE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.18",
    "qupde",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
qupde = { git = "https://github.com/albaniolivieri/QuPDE.git" }

[tool.hatch.build.targets.wheel]
packages = ["app"]
